fix: table overflow when screen is small

--- a/ui/src/appV2/app.css
+++ b/ui/src/appV2/app.css
@@ -25,3 +25,6 @@ body,
 #main-content {
   flex: 1;
 }
+.table-wrapper {
+  overflow-x: auto;
+}
